name: "3 - Search Multiple Results Flow"
appId: "com.recipedia"
tags:
  - search
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- extendedWaitUntil:
    visible:
      id: "SearchScreen::SearchBar"
    timeout: 3000
    label: "Wait for search screen to appear"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Action - Focus on search bar"

- runFlow:
    file: "../../flows/waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText: "Ca"

- waitForAnimationToEnd:
    label: "Wait for keyboard to finish typing"

- assertVisible:
    id: "SearchScreen::SearchBar"
    text: "Ca"
    label: "Assert - Verify search bar shows 'Ca'"

- tapOn:
    id: "SearchScreen::SearchBarResults::Item::0"
    label: "Action - Tap on first element to close the keyboard"

- runFlow:
    file: "../../flows/waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to close"

- runFlow:
    file: "../../asserts/search/searchbar/searchBarFilteredOnCa.yaml"
    label: "Assert - Verify search bar dropdown shows filtered results for 'Ca'"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Action - Focus on search bar again"

- runFlow:
    file: "../../flows/search/commitTypedSearch.yaml"
    label: "Commit typed search, keep filter"

- extendedWaitUntil:
    visible:
      id: "SearchScreen::RecipeCards::.*::Cover"
    timeout: 30000
    label: "Wait for cards to appear"

- runFlow:
    file: "../../asserts/search/en/searchScreenFilteredOnCa.yaml"
    label: "Assert - Verify Search screen shows filtered recipe cards"

- tapOn:
    id: "SearchScreen::SearchBar::RightIcon"
    label: "Action - Tap clear icon to remove search filter"

- runFlow:
    file: "../../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert - Verify all recipe cards are visible again"
